fix decor invisibly hiding links in threads

--- a/templates/xptry/Default.group/style.css
+++ b/templates/xptry/Default.group/style.css
@@ -2,7 +2,7 @@ body, .outer {
     overflow: hidden;
 }
 
-div.hud {
+div.hud, div.decor {
 	pointer-events: none;
 }
 
